# tweet-sentiment-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  enforcement.conf  registry.md  tasks.md
.claude/hooks/: commit-msg  post-merge  pre-commit  pre-push
.claude/rules/: requirements.txt
.github/workflows/: ci.yml
benchmarks/: preprocessing_benchmark.py
notebooks/: 01_eda.ipynb  02_tokenization.ipynb  03_inference_baseline.ipynb
rust/tweet-preprocessor/: Cargo.toml  README.md
rust/tweet-preprocessor/src/: main.rs
src/: preprocessing.py  training.py
tests/: test_preprocessing.py  test_training.py
