[package]
name = "tweet-preprocessor"
version = "0.1.0"
edition = "2021"
description = "High-performance tweet preprocessing CLI for sentiment analysis at scale"
authors = ["Lucas Santos"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
polars = { version = "0.46", features = ["lazy", "csv", "parquet", "dtype-struct"] }
regex = "1"
rayon = "1.10"
emojis = "0.6"
indicatif = { version = "0.17", features = ["rayon"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
